--- a/TrabalhoPratico1.cbp
+++ b/TrabalhoPratico1.cbp
@@ -43,6 +43,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="general.h" />
+		<Unit filename="historicos.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="historicos.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
