--- a/TrabalhoPratico1.cbp
+++ b/TrabalhoPratico1.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="alteracoes.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="alteracoes.h" />
 		<Unit filename="departamento.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -43,6 +47,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="general.h" />
+		<Unit filename="historicos.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="historicos.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
