--- a/TrabalhoPratico1.cbp
+++ b/TrabalhoPratico1.cbp
@@ -51,6 +51,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="historicos.h" />
+		<Unit filename="listagens.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="listagens.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
